merge gc logging option from 0.20 based internal branch to trunk based branch
Summary:
merge gc logging option from 0.20 based internal branch to trunk based branch

Test Plan:
bin/start-hbase.sh locally and verified gc-hbase.log got generated.

Ran install-hbase.sh and verified same on cluster tests.

DiffCamp Revision: 117587
Reviewed By: nspiegelberg
CC: nspiegelberg
Revert Plan:
OK

git-svn-id: https://svn.apache.org/repos/asf/hbase/branches/0.89@1176151 13f79535-47bb-0310-9956-ffa450edef68